- STARKA-158 generalize gvcf nocompress to support regions/compression/tabix index
- STARKA-155 add ploidy specification via bedfile (supporting haploid and deleted states only_
- STARKA-151 add VQSR model trained using RefError*100 and median of chromosome means for depth normalization
- STARKA-152 add ref indel error multiplier to reduce undercalling of homozygous indels
- STARKA-148 add support for hetalt ins and del VQSR models to starling
- STARKA-149 fix Qrule/default filtering being applied even when a VQSR model is specified; also remove some special-case scoring
- STARKA-150 allow tabs as separators in scoring model (model.json) file
- Extend address sanitizer build support, improve build option checks
- STARKA-144 add initial site-noise strelka feature
- STARKA-73 add strelka noise extractor workflow
- STARKA-143 Improve runtime for high-depth centromere regions, especially for strelka
- Add starling option to always genotype indels provided in vcf
- STARKA-135 add strand bias feature
- STARKA-138 add read position features to strelka SNV output
- STARKA-136 add mapping info values to strelka SNV output
v2.1.5
- Improve VQSR depth normalization
- Add CRAM input support (still experimental pending samtools idxstats
capability for CRAM)
v2.1.4
- Turned ON DP filter for rule filters as default
- Made scoring-model a configurable option for starling pyflow
- Sync many blt_util changes with manta
- Changed scoring model names to be case insensitive, added assertion for unknown model
- Change minimum support gcc version to 4.7
- Runtime opt: reduce excessive syscalls from position based std::map's
v2.1.3
- STARKA-127 fix strelka workflow config file interface
- STARKA-128 fix build with gcc-4.9.0, remove solexa q-scores
- STARKA-125 add starling workflow and demo
v2.1.2
- STARKA-124 fix strelka overlapping indel issue
- STARKA-118 fix GSNAP alignment example: leading deletion in exon