@@ -1,3 +1,15 @@
+// -*- mode: c++; indent-tabs-mode: nil; -*-
+//
+// Starka
+// Copyright (c) 2009-2014 Illumina, Inc.
+//
+// This software is provided under the terms and conditions of the
+// Illumina Open Source Software License 1.
+//
+// You should have received a copy of the Illumina Open Source
+// Software License 1 along with this program. If not, see
+// <https://github.com/sequencing/licenses/>
+//
 /*
  * scoringmodels.hh
  *
@@ -53,21 +65,36 @@ get_feature_label(const unsigned idx)
 {
     switch (idx)
     {
-    case QSS_NT: return "QSS_NT";
-    case N_FDP_RATE: return "N_FDP_RATE";
-    case T_FDP_RATE: return "T_FDP_RATE";
-    case N_SDP_RATE: return "N_SDP_RATE";
-    case T_SDP_RATE: return "T_SDP_RATE";
-    case N_DP_RATE: return "N_DP_RATE";
-    case TIER1_ALLELE_RATE: return "TIER1_ALLELE_RATE";
-    case MQ: return "MQ";
-    case n_mapq0: return "n_mapq0";
-    case strandBias: return "strandBias";
-    case ReadPosRankSum: return "ReadPosRankSum";
-    case altmap: return "altmap";
-    case altpos: return "altpos";
-    case pnoise: return "pnoise";
-    case pnoise2:return "pnoise2";
+    case QSS_NT:
+        return "QSS_NT";
+    case N_FDP_RATE:
+        return "N_FDP_RATE";
+    case T_FDP_RATE:
+        return "T_FDP_RATE";
+    case N_SDP_RATE:
+        return "N_SDP_RATE";
+    case T_SDP_RATE:
+        return "T_SDP_RATE";
+    case N_DP_RATE:
+        return "N_DP_RATE";
+    case TIER1_ALLELE_RATE:
+        return "TIER1_ALLELE_RATE";
+    case MQ:
+        return "MQ";
+    case n_mapq0:
+        return "n_mapq0";
+    case strandBias:
+        return "strandBias";
+    case ReadPosRankSum:
+        return "ReadPosRankSum";
+    case altmap:
+        return "altmap";
+    case altpos:
+        return "altpos";
+    case pnoise:
+        return "pnoise";
+    case pnoise2:
+        return "pnoise2";
     default:
         assert(false && "Unknown feature");
         return nullptr;
@@ -107,9 +134,10 @@ static const unsigned max_hpol_len(40);
 static const unsigned max_indel_len(15);
 typedef std::pair<double,double> error_model[max_hpol_len];
 
-class indel_model{
+class indel_model
+{
 public:
-    indel_model(){};
+    indel_model() {};
     void add_prop(const unsigned hpol_case, const double prop_ins,const double prop_del);
     double get_prop(const unsigned hpol_case);
     error_model model;
@@ -119,9 +147,10 @@ private:
 
 
 
-class calibration_model{
+class calibration_model
+{
 public:
-    calibration_model(){};
+    calibration_model() {};
 
     typedef std::map<int, std::vector<double> > calibration_type;
     typedef std::vector< calibration_type > set_of_calibrations_type;
@@ -146,36 +175,37 @@ private:
     std::string name;
 };
 
-class scoring_models{
+class scoring_models
+{
 public:
-   static scoring_models* Instance();
-   void load_models(const std::string& model_file);
-   void load_indel_model(boost::property_tree::ptree pt,const std::string& model_name);
+    static scoring_models* Instance();
+    void load_models(const std::string& model_file);
+    void load_indel_model(boost::property_tree::ptree pt,const std::string& model_name);
 
-   void load_calibration_model(boost::property_tree::ptree pt,const std::string& model_name,const std::string& model_type="RF");
-   int score_instance(const feature_type& features);
+    void load_calibration_model(boost::property_tree::ptree pt,const std::string& model_name,const std::string& model_type="RF");
+    int score_instance(const feature_type& features);
 
-   const error_model& get_indel_model(const std::string& pattern);
-   bool indel_init=false;
+    const error_model& get_indel_model(const std::string& pattern);
+    bool indel_init=false;
 
-   bool calibration_init=false;
+    bool calibration_init=false;
 
 private:
-   scoring_models(){};  // Private so that it can  not be called
-   scoring_models(scoring_models const&){};             // copy constructor is private
-   scoring_models& operator=(scoring_models const&);  // assignment operator is private
-   static scoring_models* m_pInstance;
-   typedef std::map<std::string,indel_model> indel_modelmap;
-   indel_modelmap indel_models;
-   std::string current_indel_model;
+    scoring_models() {}; // Private so that it can  not be called
+    scoring_models(scoring_models const&) {};            // copy constructor is private
+    scoring_models& operator=(scoring_models const&);  // assignment operator is private
+    static scoring_models* m_pInstance;
+    typedef std::map<std::string,indel_model> indel_modelmap;
+    indel_modelmap indel_models;
+    std::string current_indel_model;
 
-   //typedef std::map<int,calibration_model> calibration_modelmap;
-   //calibration_modelmap calibration_models;
-   calibration_model randomforest_model;
+    //typedef std::map<int,calibration_model> calibration_modelmap;
+    //calibration_modelmap calibration_models;
+    calibration_model randomforest_model;
 
 
-   //
-   //std::map< std::map<int, std::vector<double> >, double> proba_for_features;
+    //
+    //std::map< std::map<int, std::vector<double> >, double> proba_for_features;
 
 
 };
