@@ -1,3 +1,4 @@
+- STARKA-161 refine somatic VQSR settings
 - STARKA-158 generalize gvcf nocompress to support regions/compression/tabix index
 - STARKA-155 add ploidy specification via bedfile (supporting haploid and deleted states only_
 - STARKA-151 add VQSR model trained using RefError*100 and median of chromosome means for depth normalization
